Fixed button spacing -.-

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -211,5 +211,5 @@ h2 {
 }
 
 #btnNewThread {
-    margin-top: 5em;
+    margin-bottom: 0.5em;
 }
